@@ -77,6 +77,9 @@ with all sufficient information, see the ChangeLog file.
   * Kernel#loop, when stopped by a StopIteration exception, returns
     what the enumerator has returned instead of nil. [Feature #11498]
 
+* Logger
+  * Logger#reopen is added to reopen a log device. [Feature #11696]
+
 * Module
   * Module#deprecate_constant [Feature #11398]
 
